--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@100..900&display=swap");
+    </style>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Jobs Web App in React</title>
   </head>
