added 50% of dark-theme functionality: added the right variables to [data-theme="dark"]
custom variable of dark theme good to go.

left with creating the button at navbar to toggle the button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Jobs Web App in React</title>
   </head>
-  <body>
+  <body data-theme="dark">
     <div id="root"></div>
   </body>
   <script
