--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dev Jobs Web App in React</title>
   </head>
-  <body data-theme="dark">
+  <body>
     <div id="root"></div>
   </body>
   <script
